working on mobile layout

--- a/index.html
+++ b/index.html
@@ -1,15 +1,25 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" sizes="32x32" href="./src/assets/images/favicon-32x32.png">
-    <link rel="stylesheet" href="./src/index.css">
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./src/assets/images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="./src/index.css" />
     <title>Frontend Mentor | Multi Step Form</title>
   </head>
-  <body>
-    <div id="root"></div>
-    
+  <body
+    class="m-0 min-h-[100vh] sm:flex sm:justify-center bg-[var(--Blue-100)]"
+  >
+    <div
+      id="root"
+      class="w-full m-0 min-h-[100vh] sm:flex sm:justify-center sm:items-center p-0"
+    ></div>
+
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
